<resources>
    <string name="app_name">Từ điển thực vật</string>
    <string name="img">Image</string>

    <string name="organ">Organ</string>
    <string name="flower">Hoa</string>
    <string name="leaf">Lá</string>
    <string name="fruit">Quả</string>
    <string name="bark">Thân</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="searchPlant">Tìm loài</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_image">SelectImage</string>
    <string name="select_image">Select Image</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="x">x</string>
    <string name="title_activity_detail_plant">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- classes botanical-->
    <string name="Class">Class</string>
    <string name="Family">Family</string>
    <string name="Genus">Genus</string>
    <string name="Order">Order</string>
    <string name="Species">Species</string>
    <string name="Phylum">Phylum</string>
    <string name="title_activity_change_bitanical">Change Botanical</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!--modul-->
    <string name="postQuestion">Bài viết</string>
    <string name="modulLibrary">Danh sách loài</string>
    <!--APP -->
    <string name="search">Tìm kiếm...</string>
    <string name="empty"></string>
    <string name="Success">Thành công</string>
    <string name="Error">Thất bại!</string>
    <string name="tooLestInfo">Quá ít thông tin</string>
    <string name="max5">Tối đa 5</string>
    <string name="loading">Hãy đợi...</string>
    <string name="dontHavePermissionCamera">Chưa cấp quyền camera!</string>
    <string name="dontHavePermissionReadStorage">Chưa cấp quyền bộ nhớ!</string>
</resources>

